# cmake_exproject

./: CMakeLists.txt
lib/: CMakeLists.txt  print_hello.cpp  print_hello.h
src/: CMakeLists.txt
