project(hello)
cmake_minimum_required(VERSION 2.8)
message(STATUS "system name: " ${CMAKE_SYSTEM})
message(STATUS "system processor: " ${CMAKE_SYSTEM_PROCESSOR})
set(CMAKE_INSTALL_PREFIX /tmp/)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin/lib)
install(FILES LICENSE README DESTINATION share/doc/hello)
install(DIRECTORY doc/ DESTINATION share/doc/hello)
install(PROGRAMS hello.sh DESTINATION bin)
add_subdirectory(src)
add_subdirectory(lib)
add_test(hello_test ${EXECUTABLE_OUTPUT_PATH}/hello)
enable_testing()
